mis-à-jour de analyse-tr.html.

--- a/analyse-tr.html
+++ b/analyse-tr.html
@@ -422,12 +422,12 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="../index.html" class="nav-logo">Autonomie</a>
+            <a href="index.html" class="nav-logo">Autonomie</a>
             <div class="nav-links">
-                <a href="../index.html#projet">Projet</a>
-                <a href="../index.html#langues">Langues</a>
-                <a href="../index.html#equipe">Contributeurs</a>
-                <a href="../scripts.html">Scripts</a>
+                <a href="index.html#projet">Projet</a>
+                <a href="index.html#langues">Langues</a>
+                <a href="index.html#equipe">Contributeurs</a>
+                <a href="scripts.html">Scripts</a>
                 <button class="theme-toggle" id="themeToggle">🌙</button>
             </div>
         </div>
@@ -438,7 +438,7 @@
         <span class="lang-badge"><span class="flag flag-tr"></span>Türkçe</span>
         <h1>Analyse Turc</h1>
         <p>Étude comparative des deux sens du mot « autonomie » en turc : 
-           <strong>аўтаномія</strong> vs <strong>аўтаномнасьць</strong>.</p>
+           <strong>otonomi</strong> vs <strong>özerklik</strong>.</p>
     </header>
 
     <main>
@@ -446,15 +446,15 @@
         <section>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="value">XXX</div>
+                    <div class="value">100</div>
                     <div class="label">URLs analysées</div>
                 </div>
                 <div class="stat-card">
-                    <div class="value">XXX</div>
+                    <div class="value">151</div>
                     <div class="label">Occurrences sens 1</div>
                 </div>
                 <div class="stat-card">
-                    <div class="value">XXX</div>
+                    <div class="value">285</div>
                     <div class="label">Occurrences sens 2</div>
                 </div>
             </div>
@@ -472,15 +472,12 @@
                     <div class="cloud-card-header">
                         <span class="dot sens1"></span>
                         <h3>Sens 1</h3>
-                        <span class="word">аўтаномія</span>
+                        <span class="word">otonomi</span>
                     </div>
                     <div class="cloud-image">
-                        <!-- Remplacer par l'image réelle -->
                         <div class="cloud-placeholder">
-                            <div class="icon">🖼️</div>
-                            <p>Remplacer par :<br><code>nuage-be-sens1.png</code></p>
+                            <img src="pals/nuage-tr-sens1.png" alt="Nuage de mots sens 1">
                         </div>
-                        <!-- <img src="../images/nuage-be-sens1.png" alt="Nuage de mots sens 1"> -->
                     </div>
                 </div>
 
@@ -488,15 +485,12 @@
                     <div class="cloud-card-header">
                         <span class="dot sens2"></span>
                         <h3>Sens 2</h3>
-                        <span class="word">аўтаномнасьць</span>
+                        <span class="word">özerklik</span>
                     </div>
                     <div class="cloud-image">
-                        <!-- Remplacer par l'image réelle -->
                         <div class="cloud-placeholder">
-                            <div class="icon">🖼️</div>
-                            <p>Remplacer par :<br><code>nuage-be-sens2.png</code></p>
+                            <img src="pals/nuage-tr-sens2.png" alt="Nuage de mots sens 1">
                         </div>
-                        <!-- <img src="../images/nuage-be-sens2.png" alt="Nuage de mots sens 2"> -->
                     </div>
                 </div>
             </div>
@@ -542,34 +536,164 @@
                     <tbody>
                         <!-- Exemple de données - à remplacer par les vraies données -->
                         <tr>
-                            <td class="word">дзяржава</td>
-                            <td>45</td>
+                            <td class="word">yerel</td>
+                            <td>122</td>
+                            <td>2</td>
+                            <td class="negative">-19.22</td>
+                            <td>120</td>
+                            <td class="positive">+19.22</td>
+                        </tr>
+                        <tr>
+                            <td class="word">avrupa</td>
+                            <td>62</td>
+                            <td>0</td>
+                            <td class="negative">-11.43</td>
+                            <td>62</td>
+                            <td class="positive">+11.43</td>
+                        </tr>
+                        <tr>
+                            <td class="word">demokratik</td>
+                            <td>48</td>
+                            <td>1</td>
+                            <td class="negative">-7.44</td>
+                            <td>47</td>
+                            <td class="positive">+7.44</td>
+                        </tr>
+                        <tr>
+                            <td class="word">yönetimler</td>
+                            <td>47</td>
+                            <td>0</td>
+                            <td class="negative">-8.66</td>
+                            <td>47</td>
+                            <td class="positive">+8.66</td>
+                        </tr>
+                        <tr>
+                            <td class="word">bağımsız</td>
+                            <td>39</td>
+                            <td>20</td>
+                            <td class="positive">+1.90</td>
+                            <td>19</td>
+                            <td class="negative">-1.90</td>
+                        </tr>
+                        <tr>
+                            <td class="word">karar</td>
                             <td>38</td>
-                            <td class="positive">+4.23</td>
-                            <td>7</td>
-                            <td class="negative">-4.23</td>
+                            <td>26</td>
+                            <td class="positive">+4.79</td>
+                            <td>12</td>
+                            <td class="negative">-4.79</td>
                         </tr>
                         <tr>
-                            <td class="word">электрамабіль</td>
-                            <td>32</td>
+                            <td class="word">özerk</td>
+                            <td>37</td>
+                            <td>2</td>
+                            <td class="negative">-4.54</td>
+                            <td>35</td>
+                            <td class="positive">+4.54</td>
+                        </tr>
+                        <tr>
+                            <td class="word">otonom</td>
+                            <td>36</td>
+                            <td>31</td>
+                            <td class="positive">+9.68</td>
                             <td>5</td>
-                            <td class="negative">-3.87</td>
-                            <td>27</td>
-                            <td class="positive">+3.87</td>
+                            <td class="negative">-9.68</td>
                         </tr>
                         <tr>
-                            <td class="word">нацыянальны</td>
-                            <td>28</td>
+                            <td class="word">dil</td>
+                            <td>30</td>
+                            <td>25</td>
+                            <td class="positive">+7.33</td>
+                            <td>5</td>
+                            <td class="negative">-7.33</td>
+                        </tr>
+                        <tr>
+                            <td class="word">türkiye</td>
+                            <td>25</td>
+                            <td>2</td>
+                            <td class="negative">-2.68</td>
+                            <td>23</td>
+                            <td class="positive">+2.68</td>
+                        </tr>
+                        <tr>
+                            <td class="word">bölgesel</td>
                             <td>24</td>
-                            <td class="positive">+3.54</td>
-                            <td>4</td>
-                            <td class="negative">-3.54</td>
+                            <td>1</td>
+                            <td class="negative">-3.31</td>
+                            <td>23</td>
+                            <td class="positive">+3.31</td>
                         </tr>
-                        <!-- Ajouter plus de lignes -->
                         <tr>
-                            <td colspan="6" style="text-align: center; color: var(--text-muted); font-style: italic;">
-                                Remplacer par les données de partition-be.tsv
-                            </td>
+                            <td class="word">öğrenme</td>
+                            <td>23</td>
+                            <td>23</td>
+                            <td class="positive">+10.64</td>
+                            <td>0</td>
+                            <td class="negative">-10.64</td>
+                        </tr>
+                        <tr>
+                            <td class="word">ifade</td>
+                            <td>23</td>
+                            <td>9</td>
+                            <td class="positive">+0.82</td>
+                            <td>14</td>
+                            <td class="negative">-0.82</td>
+                        </tr>
+                        <tr>
+                            <td class="word">hareket</td>
+                            <td>23</td>
+                            <td>7</td>
+                            <td class="negative">-0.79</td>
+                            <td>16</td>
+                            <td class="positive">+0.79</td>
+                        </tr>
+                        <tr>
+                            <td class="word">idari</td>
+                            <td>23</td>
+                            <td>0</td>
+                            <td class="negative">-4.23</td>
+                            <td>23</td>
+                            <td class="positive">+4.23</td>
+                        </tr>
+                        <tr>
+                            <td class="word">kendini</td>
+                            <td>22</td>
+                            <td>15</td>
+                            <td class="positive">+2.99</td>
+                            <td>7</td>
+                            <td class="negative">-2.99</td>
+                        </tr>            
+                        <tr>
+                            <td class="word">yönetim</td>
+                            <td>22</td>
+                            <td>0</td>
+                            <td class="negative">-4.05</td>
+                            <td>22</td>
+                            <td class="negative">+4.05</td>
+                        </tr>            
+                        <tr>
+                            <td class="word">birliği</td>
+                            <td>21</td>
+                            <td>1</td>
+                            <td class="negative">-2.82</td>
+                            <td>20</td>
+                            <td class="positive">+2.82</td>
+                        </tr>  
+                        <tr>
+                            <td class="word">kelimeler</td>
+                            <td>21</td>
+                            <td>21</td>
+                            <td class="positive">+9.71</td>
+                            <td>0</td>
+                            <td class="negative">-9.71</td>
+                        </tr>  
+                        <tr>
+                            <td class="word">tam</td>
+                            <td>20</td>
+                            <td>6</td>
+                            <td class="negative">-0.76</td>
+                            <td>14</td>
+                            <td class="positive">+0.76</td>
                         </tr>
                     </tbody>
                 </table>
@@ -578,14 +702,13 @@
 
         <!-- Actions -->
         <div class="action-links">
-            <a href="../tableaux/tableau-be.html" class="btn btn-primary">📋 Voir le tableau complet</a>
-            <a href="../concordances/be/" class="btn btn-secondary">📖 Concordances</a>
-            <a href="../index.html#langues" class="btn btn-secondary">← Retour aux langues</a>
+            <a href="tableaux/tableau-tr.html" class="btn btn-primary">📋 Voir le tableau complet</a>
+            <a href="index.html#langues" class="btn btn-secondary">← Retour aux langues</a>
         </div>
     </main>
 
     <footer>
-        <p>Projet PPE1 — M1 TAL — Université Sorbonne Nouvelle — 2024-2025</p>
+        <p>Projet PPE1 — M1 TAL — Université Sorbonne Nouvelle — 2025-2026</p>
     </footer>
 
     <script>
@@ -614,15 +737,15 @@
                 labels: ['URL 1', 'URL 2', 'URL 3', 'URL 4', 'URL 5', 'URL 6', 'URL 7', 'URL 8', 'URL 9', 'URL 10'],
                 datasets: [
                     {
-                        label: 'аўтаномія (sens 1)',
-                        data: [12, 8, 15, 5, 10, 7, 14, 3, 9, 11],
+                        label: 'otonomi (sens 1)',
+                        data: [6, 1, 2, 4, 4, 5, 1, 1, 1, 1],
                         backgroundColor: 'rgba(102, 126, 234, 0.7)',
                         borderColor: 'rgba(102, 126, 234, 1)',
                         borderWidth: 1
                     },
                     {
-                        label: 'аўтаномнасьць (sens 2)',
-                        data: [3, 6, 2, 12, 4, 9, 1, 15, 7, 5],
+                        label: 'özerklik (sens 2)',
+                        data: [1, 1, 3, 0, 0, 0, 0, 1, 0, 0],
                         backgroundColor: 'rgba(240, 147, 251, 0.7)',
                         borderColor: 'rgba(240, 147, 251, 1)',
                         borderWidth: 1
