Udpate analyse-kr

--- a/scripts.html
+++ b/scripts.html
@@ -856,17 +856,17 @@ python cooccurrents.py ../pals/dump-tr.txt \
                         </div>
                         <pre><code class="language-bash"># Nuage de mots - Sens 1 (자율)
 wordcloud_cli \
-  --text ../pals/pals-kr-sens1.txt \
+  --text ../pals/contexte-kr-sens1_cleaned.txt \
   --imagefile nuage-kr-sens1.png \
   --stopwords stopwords_kr.txt \
-  --fontfile "/path/to/korean-font.ttf"
+    --fontfile /System/Library/Fonts/AppleGothic.ttf
 
 # Nuage de mots - Sens 2 (자립)
 wordcloud_cli \
-  --text ../pals/pals-kr-sens2.txt \
+  --text ../pals/pals-kr-sens2_cleaned.txt \
   --imagefile nuage-kr-sens2.png \
   --stopwords stopwords_kr.txt \
-  --fontfile "/path/to/korean-font.ttf"</code></pre>
+  --fontfile /System/Library/Fonts/AppleGothic.ttf</code></pre>
                     </div>
                 </div>
                 <div class="tab-content" id="tr6">
