mis-à-jour des fichiers html.

--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                 <a href="#projet">Projet</a>
                 <a href="#langues">Langues</a>
                 <a href="#equipe">Contributeurs</a>
-                <a href="scripts.html">Scripts</a>
+                <a href="web/scripts.html">Scripts</a>
                 <button class="theme-toggle" id="themeToggle">🌙</button>
             </div>
         </div>
@@ -623,7 +623,7 @@
                 </div>
             </div>
             <p style="text-align: center; margin-top: 2rem; color: var(--text-muted);">
-                <a href="scripts.html" style="color: var(--primary);">Voir le détail des scripts →</a>
+                <a href="web/scripts.html" style="color: var(--primary);">Voir le détail des scripts →</a>
             </p>
         </div>
     </section>
@@ -656,8 +656,8 @@
                     </div>
                 </div>
                 <div class="lang-card-actions">
-                    <a href="tableaux/tableau-be.html" class="btn btn-primary">Tableau</a>
-                    <a href="analyse-be.html" class="btn btn-secondary">Analyse</a>
+                    <a href="web/tableaux/tableau-be.html" class="btn btn-primary">Tableau</a>
+                    <a href="web/analyse-be.html" class="btn btn-secondary">Analyse</a>
                 </div>
             </div>
 
@@ -681,8 +681,8 @@
                     </div>
                 </div>
                 <div class="lang-card-actions">
-                    <a href="tableaux/tableau-kr.html" class="btn btn-primary">Tableau</a>
-                    <a href="analyse-kr.html" class="btn btn-secondary">Analyse</a>
+                    <a href="web/tableaux/tableau-kr.html" class="btn btn-primary">Tableau</a>
+                    <a href="web/analyse-kr.html" class="btn btn-secondary">Analyse</a>
                 </div>
             </div>
 
@@ -706,8 +706,8 @@
                     </div>
                 </div>
                 <div class="lang-card-actions">
-                    <a href="tableaux/tableau-tr.html" class="btn btn-primary">Tableau</a>
-                    <a href="analyse-tr.html" class="btn btn-secondary">Analyse</a>
+                    <a href="web/tableaux/tableau-tr.html" class="btn btn-primary">Tableau</a>
+                    <a href="web/analyse-tr.html" class="btn btn-secondary">Analyse</a>
                 </div>
             </div>
         </div>
@@ -741,10 +741,9 @@
 
             <div class="team-card">
                 <div class="team-avatar">
-                    <!-- Placeholder -->
-                    🌙
+                    <img src="web/photo_umut.png" alt="photo du membre" style="width: 85px; height: 95px; border-radius: 20%;">
                 </div>
-                <h3>Umut-Gazi</h3>
+                <h3>Umut Gazi</h3>
                 <span class="lang-badge"><span class="flag flag-tr"></span> Turc</span>
             </div>
         </div>
