--- a/web/analyse-tr.html
+++ b/web/analyse-tr.html
@@ -415,18 +415,18 @@
             box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.1);
         }
 
-        .flag-tr { background-image: url("flags/tr.svg"); }
+        .flag-tr { background-image: url("../flags/tr.svg"); }
     </style>
 </head>
 <body>
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="index.html" class="nav-logo">Autonomie</a>
+            <a href="../index.html" class="nav-logo">Autonomie</a>
             <div class="nav-links">
-                <a href="index.html#projet">Projet</a>
-                <a href="index.html#langues">Langues</a>
-                <a href="index.html#equipe">Contributeurs</a>
+                <a href="../index.html#projet">Projet</a>
+                <a href="../index.html#langues">Langues</a>
+                <a href="../index.html#equipe">Contributeurs</a>
                 <a href="scripts.html">Scripts</a>
                 <button class="theme-toggle" id="themeToggle">🌙</button>
             </div>
@@ -476,7 +476,7 @@
                     </div>
                     <div class="cloud-image">
                         <div class="cloud-placeholder">
-                            <img src="pals/nuage-tr-sens1.png" alt="Nuage de mots sens 1">
+                            <img src="../pals/nuage-tr-sens1.png" alt="Nuage de mots sens 1">
                         </div>
                     </div>
                 </div>
@@ -489,7 +489,7 @@
                     </div>
                     <div class="cloud-image">
                         <div class="cloud-placeholder">
-                            <img src="pals/nuage-tr-sens2.png" alt="Nuage de mots sens 1">
+                            <img src="../pals/nuage-tr-sens2.png" alt="Nuage de mots sens 1">
                         </div>
                     </div>
                 </div>
@@ -702,8 +702,8 @@
 
         <!-- Actions -->
         <div class="action-links">
-            <a href="tableaux/tableau-tr.html" class="btn btn-primary">📋 Voir le tableau complet</a>
-            <a href="index.html#langues" class="btn btn-secondary">← Retour aux langues</a>
+            <a href="../tableaux/tableau-tr.html" class="btn btn-primary">📋 Voir le tableau complet</a>
+            <a href="../index.html#langues" class="btn btn-secondary">← Retour aux langues</a>
         </div>
     </main>
 
