--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="../index.html" class="nav-logo">Autonomie</a>
+            <a href="index.html" class="nav-logo">Autonomie</a>
             <div class="nav-links">
                 <a href="#projet">Projet</a>
                 <a href="#langues">Langues</a>
