--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.1);
     }
 
-        /* Biélorussie – blanc rouge blanc */
+        /* Bélarus – blanc rouge blanc */
         .flag-by-wrw { background-image: url("web/flags/be.svg"); }
 
         /* Corée du Sud */
@@ -641,7 +641,7 @@
                 <div class="lang-card-header">
                     <span class="flag flag-by-wrw" style="width: 2.5rem; height: 1.8rem;"></span>
                     <div>
-                        <h3>Biélorusse</h3>
+                        <h3>Bélarussien</h3>
                         <span class="native">Беларуская мова</span>
                     </div>
                 </div>
@@ -726,7 +726,7 @@
                     <img src="web/photo_sarah.jpeg" alt="photo du membre" style="width: 90px; height: 90px; border-radius:50%;">
                 </div>
                 <h3>Sarah</h3>
-                <span class="lang-badge"><span class="flag flag-by-wrw"></span> Biélorusse</span>
+                <span class="lang-badge"><span class="flag flag-by-wrw"></span> Bélarussien</span>
             </div>
 
             <div class="team-card">
