--- a/web/analyse-be.html
+++ b/web/analyse-be.html
@@ -516,20 +516,20 @@
         <section>
             <div class="text-content">
                 <h2>Introduction</h2>
-                <p>Cette analyse porte sur l'usage du concept d'autonomie en bélarussien à travers deux lexèmes distincts : <strong>аўтаномія</strong> et <strong>аўтаномнасць</strong> (avec sa variante orthographique аўтаномнасьць). Notre corpus comprend 25,221 mots analysés, avec 232 occurrences du premier terme et 212 du second, soit une distribution relativement équilibrée, qui cache cependant des différences sémantiques profondes.</p>
+                <p>Cette analyse porte sur l'usage du concept d'autonomie en bélarussien à travers deux lexèmes distincts : <strong>аўтаномія</strong> et <strong>аўтаномнасць</strong> (avec sa variante orthographique аўтаномнасьць). Notre corpus comprend 102 liens analysés, avec 446 occurrences du premier terme et 102 du second, soit une distribution déséquilibrée, qui cache des différences sémantiques profondes.</p>
             </div>
             <div class="stats-grid">
                 <div class="stat-card">
-                    <div class="value">232</div>
+                    <div class="value">446</div>
                     <div class="label">Occurrences аўтаномія</div>
                 </div>
                 <div class="stat-card">
-                    <div class="value">212</div>
+                    <div class="value">244</div>
                     <div class="label">Occurrences аўтаномнасць</div>
                 </div>
                 <div class="stat-card">
-                    <div class="value">25,221</div>
-                    <div class="label">Mots analysés au total</div>
+                    <div class="value">102</div>
+                    <div class="label">Pages analysés</div>
                 </div>
             </div>
         </section>
@@ -567,6 +567,8 @@
                     <li>Composants techniques : <strong>батарэі</strong> (batteries, +5.69), <strong>акумулятар</strong> (accumulateur, +5.66), <strong>квт</strong>  (kWh, +7.21)</li>
                 </ul>
             </div>
+
+            <p>Le mot аўтаномнасьць étant assez spécialisé, il a l'air d'être moins utilisé (nous avons eu quelques difficultés à trouver des pages lors de la recherche le pages Web sur ce terme).</p>
 
             <!-- INSIGHTS-->
             <div class="insights-grid">
