--- a/web/analyse-be.html
+++ b/web/analyse-be.html
@@ -716,7 +716,7 @@
                         <span class="word">аўтаномія</span>
                     </div>
                     <div class="cloud-image">
-                        <img src="pals/nuage-be-sens1.png" alt="Nuage de mots аўтаномія">
+                        <img src="../pals/nuage-be-sens1.png" alt="Nuage de mots аўтаномія">
                     </div>
                 </div>
 
@@ -727,7 +727,7 @@
                         <span class="word">аўтаномнасць</span>
                     </div>
                     <div class="cloud-image">
-                        <img src="pals/nuage-be-sens2.png" alt="Nuage de mots аўтаномнасць">
+                        <img src="../pals/nuage-be-sens2.png" alt="Nuage de mots аўтаномнасць">
                     </div>
                 </div>
             </div>
