ajoute analyse turc en détaille et mis-à-jour de index.html

--- a/index.html
+++ b/index.html
@@ -582,6 +582,81 @@
         </div>
     </header>
 
+        <!-- Distinction linguistique -->
+    <section id="distinction" style="padding-top: 2rem;">
+        <div class="section-header">
+            <h2>Pourquoi deux mots ?</h2>
+            <p>Dans chaque langue étudiée, le concept d'autonomie se traduit par deux termes distincts selon le
+                contexte.</p>
+        </div>
+
+        <div class="lang-grid">
+            <!-- Coréen -->
+            <div class="lang-card">
+                <div class="lang-card-header">
+                    <span class="flag flag-kr" style="width: 2.5rem; height: 1.8rem;"></span>
+                    <div>
+                        <h3>Coréen</h3>
+                        <span class="native">한국어</span>
+                    </div>
+                </div>
+                <div class="lang-words" style="font-size: 0.95rem; line-height: 1.7;">
+                    <p style="margin-bottom: 0.75rem;">En coréen, il existe deux mots distincts pour exprimer l'idée
+                        d'autonomie :</p>
+                    <ul style="margin-left: 1rem; margin-bottom: 0.75rem;">
+                        <li><strong>자율</strong> est utilisé pour les machines, les systèmes ou tout ce qui fonctionne de
+                            manière autonome.</li>
+                        <li><strong>자립</strong> s'emploie pour une personne, une région, une communauté, etc., lorsqu'on
+                            parle d'indépendance matérielle ou économique.</li>
+                    </ul>
+                    <p><em>Ces deux termes ne sont pas interchangeables.</em></p>
+                </div>
+            </div>
+
+            <!-- Bélarussien -->
+            <div class="lang-card">
+                <div class="lang-card-header">
+                    <span class="flag flag-by-wrw" style="width: 2.5rem; height: 1.8rem;"></span>
+                    <div>
+                        <h3>Biélorusse</h3>
+                        <span class="native">Беларуская мова</span>
+                    </div>
+                </div>
+                <div class="lang-words" style="font-size: 0.95rem; line-height: 1.7;">
+                    <p style="margin-bottom: 0.75rem;">En bélarussien, on retrouve également deux mots, qui ne
+                        signifient pas la même chose :</p>
+                    <ul style="margin-left: 1rem; margin-bottom: 0.75rem;">
+                        <li><strong>аўтаномія</strong> correspond à l'autonomie d'un État ou d'une région.</li>
+                        <li><strong>аўтаномнасьць</strong> correspond à l'autonomie d'un appareil, comme un téléphone ou
+                            une machine.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Turc -->
+            <div class="lang-card">
+                <div class="lang-card-header">
+                    <span class="flag flag-tr" style="width: 2.5rem; height: 1.8rem;"></span>
+                    <div>
+                        <h3>Turc</h3>
+                        <span class="native">Türkçe</span>
+                    </div>
+                </div>
+                <div class="lang-words" style="font-size: 0.95rem; line-height: 1.7;">
+                    <p style="margin-bottom: 0.75rem;">C'est la même distinction en turc. Même si les deux mots sont
+                        interchangeables en définition, à l'usage commun :</p>
+                    <ul style="margin-left: 1rem; margin-bottom: 0.75rem;">
+                        <li>On utilise l'emprunt du français, <strong>otonomi</strong>, plutôt pour les machines,
+                            appareils, personnes ou voitures.</li>
+                        <li>Pour parler d'indépendance sociale, on utilise plutôt <strong>özerklik</strong> →
+                            <strong>öz</strong> (soi-même) + <strong>erk</strong> (pouvoir, capacité de gouverner).</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Projet -->
     <section id="projet">
         <div class="section-header">
@@ -656,7 +731,7 @@
                     </div>
                 </div>
                 <div class="lang-card-actions">
-                    <a href="web/tableaux/tableau-be.html" class="btn btn-primary">Tableau</a>
+                    <a href="tableaux/tableau-be.html" class="btn btn-primary">Tableau</a>
                     <a href="web/analyse-be.html" class="btn btn-secondary">Analyse</a>
                 </div>
             </div>
@@ -681,7 +756,7 @@
                     </div>
                 </div>
                 <div class="lang-card-actions">
-                    <a href="web/tableaux/tableau-kr.html" class="btn btn-primary">Tableau</a>
+                    <a href="tableaux/tableau-kr.html" class="btn btn-primary">Tableau</a>
                     <a href="web/analyse-kr.html" class="btn btn-secondary">Analyse</a>
                 </div>
             </div>
@@ -706,7 +781,7 @@
                     </div>
                 </div>
                 <div class="lang-card-actions">
-                    <a href="web/tableaux/tableau-tr.html" class="btn btn-primary">Tableau</a>
+                    <a href="tableaux/tableau-tr.html" class="btn btn-primary">Tableau</a>
                     <a href="web/analyse-tr.html" class="btn btn-secondary">Analyse</a>
                 </div>
             </div>
