--- a/web/analyse-kr.html
+++ b/web/analyse-kr.html
@@ -463,7 +463,7 @@
             <div class="nav-links">
                 <a href="../index.html#projet">Projet</a>
                 <a href="../index.html#langues">Langues</a>
-                <a href="../index.html#equipe">Équipe</a>
+                <a href="../index.html#equipe">Contributeurs</a>
                 <a href="scripts.html">Scripts</a>
                 <button class="theme-toggle" id="themeToggle">🌙</button>
             </div>
