--- a/web/analyse-be.html
+++ b/web/analyse-be.html
@@ -573,7 +573,7 @@
             <!-- INSIGHTS-->
             <div class="insights-grid">
                 <div class="insight-card">
-                    <h4>🏛️ аўтаномія : politique</h4>
+                    <h4>аўтаномія : politique</h4>
                     <ul>
                         <li>нацыянальна-культурная (29.86)</li>
                         <li>царквы (église, 6.42)</li>
@@ -583,7 +583,7 @@
                     </ul>
                 </div>
                 <div class="insight-card">
-                    <h4>🔋 аўтаномнасць : technique</h4>
+                    <h4>аўтаномнасць : technique</h4>
                     <ul>
                         <li>павялічвае (augmente, 19.74)</li>
                         <li>wltp, км (15.80, 15.14)</li>
@@ -593,7 +593,7 @@
                     </ul>
                 </div>
                 <div class="insight-card">
-                    <h4>📊 Distribution</h4>
+                    <h4>Distribution</h4>
                     <ul>
                         <li>аўтаномія : 232 occurrences</li>
                         <li>аўтаномнасць : 212 occurrences</li>
