--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
     <footer>
         <p>Projet PPE1 — M1 TAL — Université Sorbonne Nouvelle — 2025-2026</p>
         <p style="margin-top: 0.5rem;">
-            <a href="https://github.com/votre-repo">GitHub</a>
+            <a href="https://github.com/catastronout/Projet-de-groupe-PPE1">GitHub</a>
         </p>
     </footer>
 
